Add readiness probe placeholder for love-manager.

--- a/charts/love-manager/templates/manager-deployment.yaml
+++ b/charts/love-manager/templates/manager-deployment.yaml
@@ -35,6 +35,10 @@ spec:
         resources:
           {{- toYaml $.Values.resources | nindent 10 }}
         {{- end }}
+        {{- with $.Values.readinessProbe }}
+        readinessProbe:
+          {{- toYaml $.Values.readinessProbe | nindent 10 }}
+        {{- end }}
       volumes:
         - name: love-conf
           configMap:
