--- a/charts/love-manager/values.yaml
+++ b/charts/love-manager/values.yaml
@@ -9,6 +9,8 @@ image:
   tag: develop
   # -- The pull policy on the LOVE manager image
   pullPolicy: IfNotPresent
+  # -- The tag name for the Nexus3 Docker repository secrets if private images need to be pulled
+  nexus3: ""
 ports:
   # -- The port on the container for normal communications
   container: 8000
@@ -17,6 +19,8 @@ ports:
 # -- The top-level secret key name that houses the rest of the secrets
 envSecretKeyName: love
 env:
+  # -- The site tag where LOVE is being run
+  LOVE_SITE: local
   # -- The external URL from the NGINX server for LOVE
   SERVER_URL: love.lsst.local
   # -- The URL path for the LOVE producer websocket host
@@ -153,4 +157,30 @@ redis:
   # -- Toleration specifications for the LOVE redis pods
   tolerations: []
   # -- Affinity rules for the LOVE redis pods
+  affinity: {}
+viewBackup:
+  # -- Whether view backup is active
+  enabled: false
+  image:
+    # -- The view backup image to use
+    repository: lsstts/love-view-backup
+    # -- The tag to use for the view backup image
+    tag: develop
+    # -- The pull policy to use for the view backup image
+    pullPolicy: IfNotPresent
+    # -- The tag name for the Nexus3 Docker repository secrets if private images need to be pulled
+    nexus3: ""
+  # -- Place to specify additional environment variables for the view backup job
+  env: {}
+  # -- The view backup job schedule in cron format
+  schedule: "0 0 1 1 *"
+  # -- Time after view backup job finishes before deletion (ALPHA)
+  ttlSecondsAfterFinished: ""
+  # -- Resource specifications for the LOVE view backup pods
+  resources: {}
+  # -- Node selection rules for the LOVE view backup pods
+  nodeSelector: {}
+  # -- Toleration specifications for the LOVE view backup pods
+  tolerations: []
+  # -- Affinity rules for the LOVE view backup pods
   affinity: {}
