--- a/charts/love-manager/values.yaml
+++ b/charts/love-manager/values.yaml
@@ -174,6 +174,8 @@ viewBackup:
   env: {}
   # -- The view backup job schedule in cron format
   schedule: "0 0 1 1 *"
+  # -- The restart policy type for the view backup cronjob
+  restartPolicy: Never
   # -- Time after view backup job finishes before deletion (ALPHA)
   ttlSecondsAfterFinished: ""
   # -- Resource specifications for the LOVE view backup pods
